--- a/app/assets/css/bootstrap.css
+++ b/app/assets/css/bootstrap.css
@@ -9,7 +9,7 @@ body, html, div {
 body, html {
     display: block;
 
-    background: #11101D;
+    background: #11101da6;
     
     width: 100%;
     height: 100%;
