--- a/app/launcher.ejs
+++ b/app/launcher.ejs
@@ -3,23 +3,22 @@
         <div class="container">
             <div class="sidebar">
                 <div class="logo-details">
-                  <img class="c-plus-plus icon" src="./assets/images/icons/icon.png" width="15px" height="15px" style="margin-right: 10%;">
                     <div class="logo_name">Nexus</div>
                 </div>
                 <ul class="nav-list">
                   <li>
                     <a id="launcher-nav-home-button" class="active">
                       <i class='bx bx-home'></i>
-                      <span class="links_name">Accueil</span>
+                      <span class="links_name">Chapitre 1</span>
                     </a>
-                     <span class="tooltip">Accueil</span>
+                     <span class="tooltip">Chapitre 1</span>
                   </li>
                   <li>
                     <a id="launcher-nav-beta-button">
                       <i class='bx bx-code-alt'></i>
-                      <span class="links_name">Beta</span>
+                      <span class="links_name">Chapitre 2</span>
                     </a>
-                     <span class="tooltip">Beta</span>
+                     <span class="tooltip">Chapitre 2</span>
                   </li>
                   <li>
                    <a href="#">
@@ -44,9 +43,6 @@
                </li>
                 </ul>
               </div>
-              <center>
-                <img src="assets/images/logo.png" class="logo">
-              </center>
         </div>
     </div>
 </div>
