--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -138,11 +138,14 @@
 .sidebar{
   position: fixed;
   left: 0;
-  top: 23px;
+  top: 0;
   height: 100%;
   width: 78px;
+  background: #11101D;
   padding: 6px 14px;
+  z-index: 99;
   transition: all 0.5s ease;
+  border-right-color: black;
 }
 
 .sidebar.open{
